# tinyfinder

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  auth.rs  build-and-test.sh  demo.sh  docker-compose.yml  handlers.rs  laravel-integration.php  main.rs  models.rs  nginx.conf  search-service.service  search.rs  storage.rs  validation.rs
data/: metadata.db
data/indices/kindergartens/: .managed.json  meta.json
docs/: GENERATIVE_ANSWERS.md  GETTING_STARTED.md  QUICKSTART.md  README.md  populate_index.py
src/: handlers.rs  llm.rs  main.rs  models.rs  search.rs  storage.rs
